# peek

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  compose-stability.conf  detekt.yml  fly.toml  gradle.properties  renovate.json  settings.gradle.kts  test-mcp-2.txt  test-mcp-env-var.txt  test-mcp.txt
server/: .env  Cargo.toml  Dockerfile  fly.toml  render.yml  spec.yaml
server/.sqlx/: query-0b2bdc275eeda16d35da767166341710186aa0eafd29162ad4c31da2b39fa8da.json  query-2d02a977684b4d598a15ff25f2a30e86ccca2d8d5e9fa92868587d5687fdb0ae.json  query-948da640c1a5bbe8f365d231ca89be0b69788ffcfcee8aef9e4a926964347e7e.json  query-b7abd991e550867bbfb8cdcc0525668fceeab99cddf1efc7df3ae7c682c90bc1.json  query-bbf009e1103c5f02a681aa6a4d33b26e46be65c5ca14d897d4857741407baa71.json
server/configuration/: base.yaml  dev.yaml
server/docs/: tasks.md
server/migrations/: 20240505104827_create_articles_table.sql
server/scripts/: init_db.sh
server/src/: app.rs  configuration.rs  environment.rs  error.rs  lib.rs  main.rs  telemetry.rs
server/src/api/: health_check.rs  mod.rs  news.rs  supported_sources.rs
server/src/db/: article_repository.rs  mod.rs  postgres_fetcher.rs
server/src/domain/: article.rs  mod.rs  news_source.rs  tag.rs
server/src/jobs/: cleanup_job.rs  mod.rs  scraper_job.rs
server/src/repository/: article.rs
server/src/services/: cache_fetcher.rs  mod.rs  scraper.rs
server/tests/: assets_loader.rs  main.rs  test_app.rs
server/tests/api/: health_check.rs  mod.rs  news.rs  supported_sources.rs
(+807 files in other folders)
