[package]
name = "peek-server"
version = "0.1.0"
edition = "2021"
authors = ["Illia Riabchuk ilya.ryabchuk@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "peek-server"

[dependencies]
actix-web = "4.11.0"
actix-jobs = "0.1.7"
actix-files = "0.6.6"
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
config = "0.14.1"
reqwest = { version = "0.12.19", features = ["json"] }
scraper = "0.21.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
feed-rs = "2.3.1"
firebase-rs = "2.2.1"

[dependencies.url]
version = "2.5.4"
features = ["default", "serde"]

[dependencies.tokio]
version = "1.45.1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
rstest = "0.23.0"
tokio = { version = "1.45.1", features = ["rt", "macros"] }

